log/build_2024-06-04_14-40-44/ros_ads_loop/stderr.log
  File "/home/adcspi/740_ADS/ADS/install/ros_ads_loop/lib/python3.10/site-packages/ros_ads_loop/arm_control.py", line 1
    class Arm_Controler()
                         ^
SyntaxError: expected ':'

